# Python_Chinese_Review

./: .gitignore  README.md  get.py  main.py  pyproject.toml  requirements.txt  run.py  startup.py
data/: For coding ONLY.txt
data/Articles/English/: ee85.txt
data/Tasks/: test.json
extensions/SmartFix/: Readme.md
extensions/extensions_loader/: init.py  installer.py  standard.md  utils.py
extensions/extensions_loader/data/: installed_packges.json
extensions/main/common/: __init__.py  init.json
extensions/main/english/: __init__.py  dictionary.py  init.json  reading.py  stardict.py
extensions/main/english/dictionary/: __init__.py  init.json  main.py  webside.py
extensions/main/english/reading/: __init__.py  init.json  main.py
extensions/question_providers/: __init__.py
extensions/question_providers/providers/: sample-xjy.py  test.json
templates/: about.html  history.html  home.html  loading.html  preview.html  settings.html  show_extensions.html  show_extensions_more.html  study.html  template.html  whiledoing.html
templates/extensions/main/common/: blank.html  choose.html
templates/extensions/main/english/dictionary/: Scratch.html  result.html
templates/extensions/main/english/reading/: reading.html
templates/question_templates/: blank_simple.html  special_classical_chinese_blank.html
templates/study/: MA.html
